Fixed z-index for Header

--- a/src/components/Header/styles.scss
+++ b/src/components/Header/styles.scss
@@ -1,5 +1,6 @@
 header {
   &.headerMain {
+    z-index: 2;
     min-height: 100px;
     border-bottom: 1px solid rgba(255, 255, 255, 0.1);
     padding: 0 25px;
